...
            onClick = onClickPrevious,
            modifier = Modifier
                .width(120.dp)
                .testTag("buttonPrevious")

        ) {
            Text(text = "Previous")
        }
        Button(
            onClick = onClickNext ,
            modifier = Modifier
                .width(120.dp)
                .testTag("buttonNext"),
        ) {
            Text(text = "Next")
        }
    }
}

@Preview(
    showBackground = true,
...
